--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="false" />
+
         <activity
             android:name=".BondoManSplashScreen"
             android:exported="true"
@@ -45,6 +46,17 @@
             </intent-filter>
         </activity>
         <service android:name=".CheckJWTBackground"/>
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="com.example.android_hit.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
+
     </application>
+
 
 </manifest>
